--- a/client/src/locales/base/zh-CN.json
+++ b/client/src/locales/base/zh-CN.json
@@ -203,12 +203,13 @@
   "copied": "复制",
   "copy-to-clipboard": "复制到剪贴板",
   "edit-purchase": "编辑购买",
-  "loading-purchase-data": "",
-  "purchase-updated-successfully": "",
-  "update-purchase": "",
-  "updating": ""
-}
-hot-summary": "",
-  "error-loading-purchase": "",
-  "error-updating-purchase": ""
+  "copied-to-clipboard": "复制到剪贴板",
+  "current-screenshot": "当前的屏幕截图",
+  "current-screenshot-summary": "当前的屏幕截图摘要",
+  "error-loading-purchase": "错误加载购买",
+  "error-updating-purchase": "错误更新购买",
+  "loading-purchase-data": "加载购买数据",
+  "purchase-updated-successfully": "购买成功更新",
+  "update-purchase": "更新购买",
+  "updating": "更新"
 }
