feat: Add Generate Public Link functionality and update routing
- Added a new modal component for generating public links with duration options.
- Integrated the GeneratePublicLinkModal into the IndexPage for user interaction.
- Created a new LinkPage to display details of the generated public link.
- Updated routing to replace the PricingPage with the new LinkPage.
- Added translations for new strings related to public link generation in multiple languages.
- Removed the PricingPage as it is no longer needed.
- Introduced a new MiniLayout for simplified page structure.

--- a/client/src/locales/base/ar-SA.json
+++ b/client/src/locales/base/ar-SA.json
@@ -214,5 +214,36 @@
   "updating": "التحديث",
   "filter-by-days": "تصفية حسب الأيام",
   "enter-number-of-days": "أدخل عدد الأيام",
-  "current-limit": "الحد الحالي"
+  "current-limit": "الحد الحالي",
+  "generate-public-link": "إنشاء رابط عام",
+  "link-duration-1h": "ساعة واحدة",
+  "link-duration-3h": "3 ساعات",
+  "link-duration-6h": "6 ساعات",
+  "link-duration-12h": "12 ساعة",
+  "link-duration-1d": "يوم واحد",
+  "link-duration-3d": "3 أيام",
+  "link-duration-7d": "7 أيام",
+  "select-link-duration": "حدد مدة الرابط",
+  "generate-link": "إنشاء رابط",
+  "public-link-generated": "تم إنشاء رابط عام",
+  "copy-link": "انسخ الرابط أدناه لمشاركته:",
+  "error-generating-link": "خطأ في إنشاء الرابط",
+  "generating-link": "جاري إنشاء الرابط...",
+  "invalid-link": "رابط غير صالح",
+  "invalid-link-code": "رمز الرابط المقدم غير صالح.",
+  "loading-link-data": "جاري تحميل بيانات الرابط...",
+  "error-loading-link": "خطأ في تحميل الرابط",
+  "no-data": "لا توجد بيانات",
+  "no-link-data": "لا توجد بيانات رابط متاحة.",
+  "dispute-resolution": "حل النزاعات",
+  "purchase-info": "معلومات الشراء",
+  "feedback-info": "معلومات التعليقات",
+  "publication-info": "معلومات النشر",
+  "refund-info": "معلومات الاسترداد",
+  "purchase-screenshot": "إيصال الشراء",
+  "feedback-date": "تاريخ التعليق",
+  "feedback-text": "نص التعليق",
+  "publication-date": "تاريخ النشر",
+  "publication-screenshot": "إثبات النشر",
+  "order-date": "تاريخ الطلب"
 }
