--- a/client/src/locales/base/en-US.json
+++ b/client/src/locales/base/en-US.json
@@ -214,5 +214,36 @@
   "updating": "Updating",
   "filter-by-days": "Filter by days",
   "enter-number-of-days": "Enter number of days",
-  "current-limit": "Current limit"
+  "current-limit": "Current limit",
+  "generate-public-link": "Generate Public Link",
+  "link-duration-1h": "1 hour",
+  "link-duration-3h": "3 hours",
+  "link-duration-6h": "6 hours",
+  "link-duration-12h": "12 hours",
+  "link-duration-1d": "1 day",
+  "link-duration-3d": "3 days",
+  "link-duration-7d": "7 days",
+  "select-link-duration": "Select link duration",
+  "generate-link": "Generate Link",
+  "public-link-generated": "Public link generated",
+  "copy-link": "Copy the link below to share it:",
+  "error-generating-link": "Error generating link",
+  "generating-link": "Generating link...",
+  "invalid-link": "Invalid Link",
+  "invalid-link-code": "The provided link code is invalid.",
+  "loading-link-data": "Loading link data...",
+  "error-loading-link": "Error Loading Link",
+  "no-data": "No Data",
+  "no-link-data": "No link data available.",
+  "dispute-resolution": "Dispute Resolution",
+  "purchase-info": "Purchase Information",
+  "feedback-info": "Feedback Information",
+  "publication-info": "Publication Information",
+  "refund-info": "Refund Information",
+  "purchase-screenshot": "Purchase Receipt",
+  "feedback-date": "Feedback Date",
+  "feedback-text": "Feedback Text",
+  "publication-date": "Publication Date",
+  "publication-screenshot": "Publication Proof",
+  "order-date": "Order date"
 }
