--- a/client/src/locales/base/es-ES.json
+++ b/client/src/locales/base/es-ES.json
@@ -214,5 +214,36 @@
   "updating": "Actualización",
   "filter-by-days": "Filtrar por días",
   "enter-number-of-days": "Ingrese el número de días",
-  "current-limit": "Límite actual"
+  "current-limit": "Límite actual",
+  "generate-public-link": "Generar enlace público",
+  "link-duration-1h": "1 hora",
+  "link-duration-3h": "3 horas",
+  "link-duration-6h": "6 horas",
+  "link-duration-12h": "12 horas",
+  "link-duration-1d": "1 día",
+  "link-duration-3d": "3 días",
+  "link-duration-7d": "7 días",
+  "select-link-duration": "Seleccionar duración del enlace",
+  "generate-link": "Generar enlace",
+  "public-link-generated": "Enlace público generado",
+  "copy-link": "Copiar el enlace a continuación para compartirlo:",
+  "error-generating-link": "Error al generar el enlace",
+  "generating-link": "Generando enlace...",
+  "invalid-link": "Enlace inválido",
+  "invalid-link-code": "El código de enlace proporcionado es inválido.",
+  "loading-link-data": "Cargando datos del enlace...",
+  "error-loading-link": "Error al cargar el enlace",
+  "no-data": "Sin datos",
+  "no-link-data": "No hay datos de enlace disponibles.",
+  "dispute-resolution": "Resolución de disputas",
+  "purchase-info": "Información de compra",
+  "feedback-info": "Información de comentarios",
+  "publication-info": "Información de publicación",
+  "refund-info": "Información de reembolso",
+  "purchase-screenshot": "Recibo de compra",
+  "feedback-date": "Fecha del comentario",
+  "feedback-text": "Texto del comentario",
+  "publication-date": "Fecha de publicación",
+  "publication-screenshot": "Prueba de publicación",
+  "order-date": "fecha de pedido"
 }
