--- a/client/src/locales/base/fr-FR.json
+++ b/client/src/locales/base/fr-FR.json
@@ -214,5 +214,36 @@
   "copied-to-clipboard": "Copié dans le presse-papiers",
   "filter-by-days": "Filtrer par jours",
   "enter-number-of-days": "Entrez le nombre de jours",
-  "current-limit": "Limite actuelle"
+  "current-limit": "Limite actuelle",
+  "generate-public-link": "Générer un lien public",
+  "link-duration-1h": "1 heure",
+  "link-duration-3h": "3 heures",
+  "link-duration-6h": "6 heures",
+  "link-duration-12h": "12 heures",
+  "link-duration-1d": "1 jour",
+  "link-duration-3d": "3 jours",
+  "link-duration-7d": "7 jours",
+  "select-link-duration": "Sélectionnez la durée du lien",
+  "generate-link": "Générer le lien",
+  "public-link-generated": "Lien public généré",
+  "copy-link": "Copier le lien ci-dessous pour le partager :",
+  "error-generating-link": "Erreur lors de la génération du lien",
+  "generating-link": "Génération du lien...",
+  "invalid-link": "Lien invalide",
+  "invalid-link-code": "Le code de lien fourni est invalide.",
+  "loading-link-data": "Chargement des données du lien...",
+  "error-loading-link": "Erreur lors du chargement du lien",
+  "no-data": "Aucune donnée",
+  "no-link-data": "Aucune donnée de lien disponible.",
+  "dispute-resolution": "Résolution des litiges",
+  "purchase-info": "Informations d'achat",
+  "feedback-info": "Informations sur les commentaires",
+  "publication-info": "Informations de publication",
+  "refund-info": "Informations de remboursement",
+  "purchase-screenshot": "Reçu d'achat",
+  "feedback-date": "Date du commentaire",
+  "feedback-text": "Texte du commentaire",
+  "publication-date": "Date de publication",
+  "publication-screenshot": "Preuve de publication",
+  "order-date": "Date de commande"
 }
