--- a/client/src/locales/base/he-IL.json
+++ b/client/src/locales/base/he-IL.json
@@ -214,5 +214,36 @@
   "updating": "עִדכּוּן",
   "filter-by-days": "סנן לפי ימים",
   "enter-number-of-days": "הזן את מספר הימים",
-  "current-limit": "הגבול הנוכחי"
+  "current-limit": "הגבול הנוכחי",
+  "generate-public-link": "צור קישור ציבורי",
+  "link-duration-1h": "שעה אחת",
+  "link-duration-3h": "3 שעות",
+  "link-duration-6h": "6 שעות",
+  "link-duration-12h": "12 שעות",
+  "link-duration-1d": "יום אחד",
+  "link-duration-3d": "3 ימים",
+  "link-duration-7d": "7 ימים",
+  "select-link-duration": "בחר משך זמן של קישור",
+  "generate-link": "צור קישור",
+  "public-link-generated": "קישור ציבורי נוצר",
+  "copy-link": "העתק את הקישור להלן כדי לשתף אותו:",
+  "error-generating-link": "שגיאה בעת יצירת קישור",
+  "generating-link": "יצירת קישור...",
+  "invalid-link": "קישור לא חוקי",
+  "invalid-link-code": "קוד הקישור שסופק אינו חוקי.",
+  "loading-link-data": "טוען נתוני קישור...",
+  "error-loading-link": "שגיאה בטעינת הקישור",
+  "no-data": "אין נתונים",
+  "no-link-data": "אין נתוני קישור זמינים.",
+  "dispute-resolution": "פתרון סכסוכים",
+  "purchase-info": "מידע רכישה",
+  "feedback-info": "מידע משוב",
+  "publication-info": "מידע פרסום",
+  "refund-info": "מידע החזר",
+  "purchase-screenshot": "קבלת קנייה",
+  "feedback-date": "תאריך משוב",
+  "feedback-text": "טקסט המשוב",
+  "publication-date": "תאריך הפרסום",
+  "publication-screenshot": "הוכחת פרסום",
+  "order-date": "תאריך הזמנה"
 }
