--- a/client/src/locales/base/zh-CN.json
+++ b/client/src/locales/base/zh-CN.json
@@ -214,5 +214,36 @@
   "updating": "更新",
   "filter-by-days": "按天数过滤",
   "enter-number-of-days": "输入天数",
-  "current-limit": "当前限制"
+  "current-limit": "当前限制",
+  "generate-public-link": "生成公共链接",
+  "link-duration-1h": "1小时",
+  "link-duration-3h": "3小时",
+  "link-duration-6h": "6小时",
+  "link-duration-12h": "12小时",
+  "link-duration-1d": "1天",
+  "link-duration-3d": "3天",
+  "link-duration-7d": "7天",
+  "select-link-duration": "选择链接持续时间",
+  "generate-link": "生成链接",
+  "public-link-generated": "已生成公共链接",
+  "copy-link": "复制下面的链接以分享:",
+  "error-generating-link": "生成链接时出错",
+  "generating-link": "正在生成链接...",
+  "invalid-link": "无效链接",
+  "invalid-link-code": "提供的链接代码无效。",
+  "loading-link-data": "正在加载链接数据...",
+  "error-loading-link": "加载链接时出错",
+  "no-data": "无数据",
+  "no-link-data": "没有可用的链接数据。",
+  "dispute-resolution": "争议解决",
+  "purchase-info": "购买信息",
+  "feedback-info": "反馈信息",
+  "publication-info": "发布信息",
+  "refund-info": "退款信息",
+  "purchase-screenshot": "购买凭证",
+  "feedback-date": "反馈日期",
+  "feedback-text": "反馈文本",
+  "publication-date": "发布日期",
+  "publication-screenshot": "发布凭证",
+  "order-date": "订购日期"
 }
