chore: add tooltip on image copybutton

--- a/client/src/locales/base/ar-SA.json
+++ b/client/src/locales/base/ar-SA.json
@@ -202,6 +202,8 @@
   "failed-to-copy": "فشل في النسخ",
   "copied": "نسخ",
   "copy-to-clipboard": "نسخ إلى الحافظة",
+  "copy-screenshot": "نسخ لقطة الشاشة",
+  "copy-screenshots": "نسخ لقطات الشاشة",
   "edit-purchase": "تحرير الشراء",
   "copied-to-clipboard": "نسخ إلى الحافظة",
   "current-screenshot": "الشاشات الحالية",
