--- a/client/src/locales/base/es-ES.json
+++ b/client/src/locales/base/es-ES.json
@@ -202,6 +202,8 @@
   "failed-to-copy": "No se pudo copiar",
   "copied": "Copiado",
   "copy-to-clipboard": "Copiar al portapapeles",
+  "copy-screenshot": "Copiar captura de pantalla",
+  "copy-screenshots": "Copiar capturas de pantalla",
   "edit-purchase": "Editar compra",
   "copied-to-clipboard": "Copiado al portapapeles",
   "current-screenshot": "Pantallas de pantallas actuales",
