--- a/client/src/locales/base/he-IL.json
+++ b/client/src/locales/base/he-IL.json
@@ -202,6 +202,8 @@
   "failed-to-copy": "העתקה נכשלה",
   "copied": "מוּעֲתָק",
   "copy-to-clipboard": "העתק ללוח",
+  "copy-screenshot": "העתק צילום מסך",
+  "copy-screenshots": "העתק צילומי מסך",
   "edit-purchase": "ערוך רכישה",
   "copied-to-clipboard": "מועתק ללוח",
   "current-screenshot": "תצלום מסך נוכחי",
