--- a/client/src/locales/base/zh-CN.json
+++ b/client/src/locales/base/zh-CN.json
@@ -202,6 +202,8 @@
   "failed-to-copy": "无法复制",
   "copied": "复制",
   "copy-to-clipboard": "复制到剪贴板",
+  "copy-screenshot": "复制屏幕截图",
+  "copy-screenshots": "复制屏幕截图",
   "edit-purchase": "编辑购买",
   "copied-to-clipboard": "复制到剪贴板",
   "current-screenshot": "当前的屏幕截图",
