feat: wip user permissions management

--- a/client/src/locales/base/ar-SA.json
+++ b/client/src/locales/base/ar-SA.json
@@ -247,5 +247,6 @@
   "feedback-text": "نص التعليق",
   "publication-date": "تاريخ النشر",
   "publication-screenshot": "إثبات النشر",
-  "order-date": "تاريخ الطلب"
+  "order-date": "تاريخ الطلب",
+  "users-and-permissions": "المستخدمون والأذونات"
 }
