--- a/client/src/locales/base/he-IL.json
+++ b/client/src/locales/base/he-IL.json
@@ -247,5 +247,6 @@
   "feedback-text": "טקסט המשוב",
   "publication-date": "תאריך הפרסום",
   "publication-screenshot": "הוכחת פרסום",
-  "order-date": "תאריך הזמנה"
+  "order-date": "תאריך הזמנה",
+  "users-and-permissions": "משתמשים והרשאות"
 }
