--- a/client/src/locales/base/zh-CN.json
+++ b/client/src/locales/base/zh-CN.json
@@ -247,5 +247,6 @@
   "feedback-text": "反馈文本",
   "publication-date": "发布日期",
   "publication-screenshot": "发布凭证",
-  "order-date": "订购日期"
+  "order-date": "订购日期",
+  "users-and-permissions": "用户和权限"
 }
