feat: improve user management

--- a/client/src/locales/base/ar-SA.json
+++ b/client/src/locales/base/ar-SA.json
@@ -248,5 +248,26 @@
   "publication-date": "تاريخ النشر",
   "publication-screenshot": "إثبات النشر",
   "order-date": "تاريخ الطلب",
-  "users-and-permissions": "المستخدمون والأذونات"
+  "users-and-permissions": "المستخدمون والأذونات",
+  "manage-api-users-desc": "قم بإدارة مستخدمي API ومطابقة الأذونات عبر Auth0 Management API.",
+  "email": "البريد الإلكتروني",
+  "delete": "حذف",
+  "permissions-for": "الأذونات لـ {{name}}",
+  "permission-read": "قراءة",
+  "permission-write": "كتابة",
+  "permission-search": "بحث",
+  "permission-backup": "نسخ احتياطي",
+  "permission-admin": "مدير",
+  "permission-auth0admin": "مشرف Auth0",
+  "save": "حفظ",
+  "close": "إغلاق",
+  "user-updated-successfully": "تم تحديث المستخدم بنجاح",
+  "error-updating-user": "فشل في تحديث المستخدم",
+  "user-deleted": "تم حذف المستخدم",
+  "error-deleting-user": "فشل في حذف المستخدم",
+  "saved": "تم الحفظ",
+  "no-management-token": "لا يوجد رمز إدارة",
+  "confirm-delete-warning": "هل أنت متأكد أنك تريد حذف {{name}}؟",
+  "failed-loading-user-permissions": "فشل في تحميل أذونات المستخدم",
+  "error-saving-permissions": "خطأ في حفظ الأذونات"
 }
