--- a/client/src/locales/base/en-US.json
+++ b/client/src/locales/base/en-US.json
@@ -248,5 +248,26 @@
   "publication-date": "Publication Date",
   "publication-screenshot": "Publication Proof",
   "order-date": "Order date",
-  "users-and-permissions": "Users and permissions"
+  "users-and-permissions": "Users and permissions",
+  "manage-api-users-desc": "Manage API users and map permissions to roles via Auth0 Management API.",
+  "email": "Email",
+  "delete": "Delete",
+  "permissions-for": "Permissions for {{name}}",
+  "permission-read": "Read",
+  "permission-write": "Write",
+  "permission-search": "Search",
+  "permission-backup": "Backup",
+  "permission-admin": "Admin",
+  "permission-auth0admin": "Auth0 Admin",
+  "save": "Save",
+  "close": "Close",
+  "user-updated-successfully": "User updated successfully",
+  "error-updating-user": "Failed to update user",
+  "user-deleted": "User deleted",
+  "error-deleting-user": "Failed to delete user",
+  "saved": "Saved",
+  "no-management-token": "No management token",
+  "confirm-delete-warning": "Are you sure you want to delete {{name}}?",
+  "failed-loading-user-permissions": "Failed to load user permissions",
+  "error-saving-permissions": "Error saving permissions"
 }
