--- a/client/src/locales/base/es-ES.json
+++ b/client/src/locales/base/es-ES.json
@@ -248,5 +248,26 @@
   "publication-date": "Fecha de publicación",
   "publication-screenshot": "Prueba de publicación",
   "order-date": "fecha de pedido",
-  "users-and-permissions": "Usuarios y permisos"
+  "users-and-permissions": "Usuarios y permisos",
+  "manage-api-users-desc": "Administre los usuarios de la API y asigne permisos a través de la API de gestión Auth0.",
+  "email": "Correo electrónico",
+  "delete": "Eliminar",
+  "permissions-for": "Permisos para {{name}}",
+  "permission-read": "Leer",
+  "permission-write": "Escribir",
+  "permission-search": "Buscar",
+  "permission-backup": "Copia de seguridad",
+  "permission-admin": "Administrador",
+  "permission-auth0admin": "Admin Auth0",
+  "save": "Guardar",
+  "close": "Cerrar",
+  "user-updated-successfully": "Usuario actualizado con éxito",
+  "error-updating-user": "Error al actualizar el usuario",
+  "user-deleted": "Usuario eliminado",
+  "error-deleting-user": "Error al eliminar el usuario",
+  "saved": "Guardado",
+  "no-management-token": "Sin token de gestión",
+  "confirm-delete-warning": "¿Estás seguro de que deseas eliminar a {{name}}?",
+  "failed-loading-user-permissions": "Error al cargar los permisos del usuario",
+  "error-saving-permissions": "Error al guardar permisos"
 }
