--- a/client/src/locales/base/fr-FR.json
+++ b/client/src/locales/base/fr-FR.json
@@ -248,5 +248,26 @@
   "publication-date": "Date de publication",
   "publication-screenshot": "Preuve de publication",
   "order-date": "Date de commande",
-  "users-and-permissions": "Utilisateurs et autorisations"
+  "users-and-permissions": "Utilisateurs et autorisations",
+  "manage-api-users-desc": "Gérez les utilisateurs de l'API et attribuez des permissions via l'API de gestion Auth0.",
+  "email": "Email",
+  "delete": "Supprimer",
+  "permissions-for": "Permissions pour {{name}}",
+  "permission-read": "Lecture",
+  "permission-write": "Écriture",
+  "permission-search": "Recherche",
+  "permission-backup": "Sauvegarde",
+  "permission-admin": "Administrateur",
+  "permission-auth0admin": "Admin Auth0",
+  "save": "Enregistrer",
+  "close": "Fermer",
+  "user-updated-successfully": "Utilisateur mis à jour avec succès",
+  "error-updating-user": "Échec de la mise à jour de l'utilisateur",
+  "user-deleted": "Utilisateur supprimé",
+  "error-deleting-user": "Échec de la suppression de l'utilisateur",
+  "saved": "Enregistré",
+  "no-management-token": "Aucun jeton de gestion",
+  "confirm-delete-warning": "Êtes-vous sûr de vouloir supprimer {{name}} ?",
+  "failed-loading-user-permissions": "Échec du chargement des autorisations de l'utilisateur",
+  "error-saving-permissions": "Erreur lors de l'enregistrement des permissions"
 }
