--- a/client/src/locales/base/he-IL.json
+++ b/client/src/locales/base/he-IL.json
@@ -248,5 +248,26 @@
   "publication-date": "תאריך הפרסום",
   "publication-screenshot": "הוכחת פרסום",
   "order-date": "תאריך הזמנה",
-  "users-and-permissions": "משתמשים והרשאות"
+  "users-and-permissions": "משתמשים והרשאות",
+  "manage-api-users-desc": "נהל משתמשי API והתאם הרשאות באמצעות Auth0 Management API.",
+  "email": "אימייל",
+  "delete": "מחק",
+  "permissions-for": "הרשאות עבור {{name}}",
+  "permission-read": "קריאה",
+  "permission-write": "כתיבה",
+  "permission-search": "חיפוש",
+  "permission-backup": "גיבוי",
+  "permission-admin": "מנהל",
+  "permission-auth0admin": "מנהל Auth0",
+  "save": "שמור",
+  "close": "סגור",
+  "user-updated-successfully": "המשתמש עודכן בהצלחה",
+  "error-updating-user": "שגיאה בעדכון המשתמש",
+  "user-deleted": "המשתמש נמחק",
+  "error-deleting-user": "שגיאה במחיקת המשתמש",
+  "saved": "נשמר",
+  "no-management-token": "אין אסימון ניהול",
+  "confirm-delete-warning": "האם אתה בטוח שאתה רוצה למחוק את {{name}}?",
+  "failed-loading-user-permissions": "נכשל טעינת הרשאות המשתמש",
+  "error-saving-permissions": "שגיאה בשמירת ההרשאות"
 }
