--- a/client/src/locales/base/zh-CN.json
+++ b/client/src/locales/base/zh-CN.json
@@ -248,5 +248,26 @@
   "publication-date": "发布日期",
   "publication-screenshot": "发布凭证",
   "order-date": "订购日期",
-  "users-and-permissions": "用户和权限"
+  "users-and-permissions": "用户和权限",
+  "manage-api-users-desc": "管理 API 用户并通过 Auth0 管理 API 映射权限到角色。",
+  "email": "电子邮件",
+  "delete": "删除",
+  "permissions-for": "{{name}} 的权限",
+  "permission-read": "读取",
+  "permission-write": "写入",
+  "permission-search": "搜索",
+  "permission-backup": "备份",
+  "permission-admin": "管理员",
+  "permission-auth0admin": "Auth0 管理",
+  "save": "保存",
+  "close": "关闭",
+  "user-updated-successfully": "用户已成功更新",
+  "error-updating-user": "更新用户失败",
+  "user-deleted": "用户已删除",
+  "error-deleting-user": "删除用户失败",
+  "saved": "已保存",
+  "no-management-token": "没有管理令牌",
+  "confirm-delete-warning": "您确定要删除 {{name}} 吗？",
+  "failed-loading-user-permissions": "加载用户权限失败",
+  "error-saving-permissions": "保存权限时出错"
 }
