--- a/client/src/locales/base/en-US.json
+++ b/client/src/locales/base/en-US.json
@@ -84,6 +84,7 @@
   "confirm-restore-warning": "Are you sure to restore the database ?",
   "tester-name": "Tester Name",
   "oauth-ids": "OAuth IDs",
+  "tester": "Tester",
   "no-data-available": "No data available",
   "error-fetching-data": "Error fetching data",
   "description": "Description",
