--- a/client/src/locales/base/es-ES.json
+++ b/client/src/locales/base/es-ES.json
@@ -269,5 +269,6 @@
   "no-management-token": "Sin token de gestión",
   "confirm-delete-warning": "¿Estás seguro de que deseas eliminar a {{name}}?",
   "failed-loading-user-permissions": "Error al cargar los permisos del usuario",
-  "error-saving-permissions": "Error al guardar permisos"
+  "error-saving-permissions": "Error al guardar permisos",
+  "tester": "Ensayador"
 }
