wip full user management

--- a/client/src/locales/base/en-US.json
+++ b/client/src/locales/base/en-US.json
@@ -122,6 +122,7 @@
   "please-enter-feedback": "Please enter feedback",
   "error": "Error",
   "success": "Success",
+  "info": "Info",
   "feedback-published-successfully": "Feedback published successfully",
   "refund-processed-successfully": "Refund processed successfully",
   "error-processing-refund": "Error processing refund",
@@ -136,6 +137,16 @@
   "please-enter-description": "Please enter desccription",
   "purchase-created-successfully": "Purchase created successfully",
   "error-creating-purchase": "Error creating purchase",
+  "user-already-assigned": "This user is already assigned to a tester",
+  "assign": "Assign",
+  "assign-selected": "Assign selected",
+  "unassign": "Unassign",
+  "unassign-selected": "Unassign selected",
+  "confirm-unassign-selected": "Are you sure you want to unassign the selected OAuth IDs?",
+  "selected-unassigned": "Selected OAuth IDs unassigned",
+  "no-tester-found-for-id": "No tester found for this OAuth ID",
+  "oauth-id-removed-successfully": "OAuth ID removed successfully",
+  "error-removing-oauth-id": "Error removing OAuth ID",
   "enter-order-number": "Enter order number",
   "enter-product-description": "Enter product description",
   "new-purchase": "New purchase",
@@ -270,5 +281,26 @@
   "no-management-token": "No management token",
   "confirm-delete-warning": "Are you sure you want to delete {{name}}?",
   "failed-loading-user-permissions": "Failed to load user permissions",
-  "error-saving-permissions": "Error saving permissions"
+  "error-saving-permissions": "Error saving permissions",
+  "selected-count": "{{count}} selected",
+  "assign-selected": "Assign selected",
+  "unassign-selected": "Unassign selected",
+  "assign": "Assign",
+  "unassign": "Unassign",
+  "no-tester-found-for-id": "No tester found for this ID",
+  "oauth-id-removed-successfully": "OAuth ID removed successfully",
+  "selected-unassigned": "Selected IDs were unassigned",
+  "assign-tester": "Assign Tester",
+  "select-tester": "Select a tester",
+  "choose-tester": "Choose a tester",
+  "or-create-new-tester": "or create a new tester",
+  "enter-tester-name": "Enter the tester name",
+  "create-and-assign": "Create and assign",
+  "assigned-successfully": "Assigned successfully",
+  "tester-created-and-assigned": "Tester created and assigned",
+  "error-assigning-testers": "Error assigning testers",
+  "error-creating-tester": "Error creating tester",
+  "create-tester": "Create a tester",
+  "tester-created": "Tester created",
+  "confirm-unassign-selected": "Are you sure you want to unassign the selected IDs from their testers?"
 }
